--- a/src/app/concursos/concurso-detail/concurso-detail.page.html
+++ b/src/app/concursos/concurso-detail/concurso-detail.page.html
@@ -16,125 +16,284 @@
 </ion-header>
 
 <ion-content>
+  <ion-card class="ion-no-margin">
+    <ion-card-header>
+      <ion-row>
+        <ion-col>
+          <ion-card-title>{{concurso.name}}</ion-card-title>
+          <ion-card-subtitle
+            >Desde {{fechaInicio}} hasta {{fechaFin}}</ion-card-subtitle
+          >
+        </ion-col>
+        <ion-col *ngIf="auth.loggedIn()" class="ion-align-self-end">
+          <!-- <ion-buttons slot="end"> -->
+          <ion-button class="ion-float-right" (click)="deleteConcurso()">
+            <ion-icon name="trash"></ion-icon>
+          </ion-button>
+          <ion-button
+            class="ion-float-right"
+            *ngIf="auth.loggedIn()"
+            [routerLink]="['/concursos/editar/'+concurso.id]"
+          >
+            <ion-icon name="create"></ion-icon>
+          </ion-button>
+          <!-- </ion-buttons> -->
+        </ion-col>
+      </ion-row>
+    </ion-card-header>
+    <!-- <ion-img [src]="concurso.thumbnailUrl"></ion-img> -->
+    <ion-card-content>
+      <!-- <ion-card-title>Descripcion</ion-card-title> -->
+      <ion-text>{{concurso.description}}</ion-text>
+    </ion-card-content>
+    <!-- <ion-label>{{item}}</ion-label> -->
+  </ion-card>
   <ion-grid>
     <ion-row class="ion-justify-content-center">
-      <ion-col size="12" size-md="10">
-        <ion-card class="ion-no-margin">
-          <ion-card-header>
-            <ion-row>
-              <ion-col>
-                <ion-card-title>{{concurso.name}}</ion-card-title>
-                <ion-card-subtitle
-                  >Desde {{fechaInicio}} hasta {{fechaFin}}</ion-card-subtitle
-                >
-              </ion-col>
-              <ion-col *ngIf="auth.loggedIn()" class="ion-align-self-end">
-                <!-- <ion-buttons slot="end"> -->
-                <ion-button class="ion-float-right" (click)="deleteConcurso()">
-                  <ion-icon name="trash"></ion-icon>
-                </ion-button>
-                <ion-button
-                  class="ion-float-right"
-                  *ngIf="auth.loggedIn()"
-                  [routerLink]="['/concursos/editar/'+concurso.id]"
-                >
-                  <ion-icon name="create"></ion-icon>
-                </ion-button>
-                <!-- </ion-buttons> -->
-              </ion-col>
-            </ion-row>
-          </ion-card-header>
-          <!-- <ion-img [src]="concurso.thumbnailUrl"></ion-img> -->
-          <ion-card-content>
-            <!-- <ion-card-title>Descripcion</ion-card-title> -->
-            <ion-text>{{concurso.description}}</ion-text>
-          </ion-card-content>
-          <!-- <ion-label>{{item}}</ion-label> -->
-        </ion-card>
+      <ion-col size="3" *ngIf="mostrarFiltro">
+        <ion-col>
+          <ion-title class="ion-margin-top">Búsqueda</ion-title>
 
-        
-        <!-- <app-search-bar> </app-search-bar> -->
-        <ion-row class="ion-justify-content-start ion-align-items-center ion-margin-top ion-margin-bottom ">
-          <h1 class="ion-margin-top ion-margin-bottom ion-margin-end">Fotografías</h1>
-          <ion-fab-button size="small" 
-            (click)="postImage()"
-          >
-          <!-- [routerLink]="['agregar-foto']"   -->
-            <ion-icon name="add"></ion-icon>
-          </ion-fab-button>
-        </ion-row>
-     
-        <ion-grid >
-          <ion-row class="ion-padding-end"> <!-- class="ion-text-center" -->
-            <ion-col size="6" size-md="3" class="">Foto</ion-col>
-            <ion-col class="ion-hide-md-down ion-padding-start" size="4">Concursante</ion-col>
-            <ion-col  class="ion-text-center"  size="3" size-md="2">Premio</ion-col>
-            <ion-col class="ion-hide-md-down ion-text-center" size="2">Puntaje</ion-col>
-            <ion-col class="ion-hide-md-up ion-text-center" size="2">Ptje</ion-col>
-            <ion-col size="1"></ion-col>
+          <ion-list>
+            <ion-radio-group value="biff">
+              <ion-list-header>
+                <ion-label>Filtrar por:</ion-label>
+              </ion-list-header>
+
+              <ion-item>
+                <ion-label>Nombre</ion-label>
+                <ion-radio slot="start" value="nombre"></ion-radio>
+              </ion-item>
+
+              <ion-item>
+                <ion-label>Código</ion-label>
+                <ion-radio slot="start" value="codigo"></ion-radio>
+              </ion-item>
+
+              <ion-item>
+                <ion-label>Concursante</ion-label>
+                <ion-radio slot="start" value="concursante"></ion-radio>
+              </ion-item>
+
+              <ion-item>
+                <ion-label>Fotoclub</ion-label>
+                <ion-radio slot="start" value="fotoclub"></ion-radio>
+              </ion-item>
+            </ion-radio-group>
+          </ion-list>
+
+          <ion-row>
+            <ion-list-header>
+              <ion-label>Puntaje:</ion-label>
+            </ion-list-header>
+            <ion-col>
+              <ion-item>
+                <ion-label position="stacked">Desde</ion-label>
+                <ion-input type="number" min="1" max="13" name="desde_puntaje">
+                </ion-input> </ion-item
+            ></ion-col>
+            <ion-col>
+              <ion-item>
+                <ion-label position="stacked">Hasta</ion-label>
+                <ion-input type="number" min="1" max="13" name="hasta_puntaje">
+                </ion-input> </ion-item
+            ></ion-col>
+            <ion-col
+              ><ion-fab-button size="small">
+                <ion-icon
+                  name="arrow-forward-circle"
+                ></ion-icon> </ion-fab-button
+            ></ion-col>
           </ion-row>
-        </ion-grid>
-        <ion-list>
-          <ion-item class="ion-no-padding">
-            <ion-grid *ngIf="!loading"> <!-- class="ion-text-center" -->
-              <ion-row size="12" *ngFor="let r of contestResults">
-                <ion-col size="6" size-md="3" class="ion-align-self-center">
-                  <ion-card-subtitle>{{ getImage(r).code }}</ion-card-subtitle>
-                  <!-- <ion-card-title >Prueba de Riendas</ion-card-title> -->
-                  
-                  <ion-text><b>{{ getImage(r).title }}</b></ion-text>
-                </ion-col>
-                <ion-col  class="ion-hide-md-down ion-text-center ion-align-self-center"  size="4">
-                  <!-- <ion-text>Martin Martinez  Martinez</ion-text> -->
-               <!--    TODO: componente usuario -->
-                  <ion-item lines="none">
-                    <!-- <app-usuario-img
-                      class="ion-float-left ion-margin-end"
-                     
-                    ></app-usuario-img> -->
 
-                    <!-- <ion-label class="ion-float-left"> -->
-                    <ion-label>
-                      <!-- <ion-card-subtitle>username</ion-card-subtitle> -->
-                      <!-- <ion-card-subtitle><a [href]="'mailto:'+'@'"> lmm@gmail </a></ion-card-subtitle> -->
-                      <!-- <ion-text><b>Perfil id {{ getImage(r).profile_id }}</b></ion-text> -->
-                      <ion-card-subtitle>{{ getFotoclubName(r) }}</ion-card-subtitle>
-                      <ion-text><b>{{ getProfile(r).name + ' ' + getProfile(r).last_name }}</b></ion-text>
-                      <!-- <ion-card-subtitle>DNI 11.111.111</ion-card-subtitle> -->
-                    </ion-label>
+          <ion-col>
+            <!-- opcion 1 -->
+            <!--   <ion-list>
+              <ion-list-header>
+                <ion-label>Premio:</ion-label>
+              </ion-list-header>
+              <ion-button fill="clear" href="#">Reprobado</ion-button>
+              <ion-button fill="clear" href="#">Aprobado</ion-button>
+              <ion-button fill="clear" href="#">Mención</ion-button>
+              <ion-button fill="clear" href="#">Medalla</ion-button>
+              <ion-button fill="clear" href="#">1° Premio</ion-button>
+            </ion-list> -->
 
-                  </ion-item>
-                </ion-col>
-                <ion-col  class="ion-text-center ion-align-self-center"  size="3" size-md="2">
-                  <ion-text>R</ion-text>
-                </ion-col>
-                <ion-col  class="ion-text-center ion-align-self-center"  size="2">
-                  <ion-text>-</ion-text>
-                </ion-col>
+            <!-- opcion 2 -->
+            <ion-list>
+              <ion-list-header>
+                <ion-label>Premio:</ion-label>
+              </ion-list-header>
+              <ion-item
+                ><ion-button fill="clear" href="#"
+                  >Reprobado</ion-button
+                ></ion-item
+              >
+              <ion-item
+                ><ion-button fill="clear" href="#"
+                  >Aprobado</ion-button
+                ></ion-item
+              >
+              <ion-item>
+                <ion-button fill="clear" href="#">Mención</ion-button></ion-item
+              >
+              <ion-item>
+                <ion-button fill="clear" href="#"
+                  >Medalla Oro</ion-button
+                ></ion-item
+              >
+              <ion-item>
+                <ion-button fill="clear" href="#"
+                  >Medalla Plata</ion-button
+                ></ion-item
+              >
+              <ion-item>
+                <ion-button fill="clear" href="#"
+                  >Medalla Bronce</ion-button
+                ></ion-item
+              >
+            </ion-list>
+          </ion-col>
+        </ion-col>
+      </ion-col>
 
-                <ion-col size="1" class="ion-align-self-center">
-                  <ion-buttons class="ion-hide-lg-down">
-                    <ion-button>
-                      <ion-icon name="create"></ion-icon>
-                    </ion-button>
-                    <ion-button>
-                      <ion-icon name="trash"></ion-icon>
-                    </ion-button>
-                  </ion-buttons>
-                  <ion-buttons class="ion-hide-lg-up">
-                    <ion-button (click)="mostrarAcciones($event, r)">
-                      <ion-icon 
-                        slot="icon-only"
-                        ios="ellipsis-horizontal"
-                        md="ellipsis-vertical"
-                      ></ion-icon>
-                    </ion-button>
-                  </ion-buttons>
-                </ion-col>
+      <ion-col>
+        <ion-row>
+          <ion-col size="11.5" push="0.25">
+            <ion-row
+              class="
+                ion-justify-content-start
+                ion-align-items-center
+                ion-margin-top
+                ion-margin-bottom
+              "
+            >
+              <h1 class="ion-margin-top ion-margin-bottom ion-margin-end">
+                Fotografías
+              </h1>
+              <ion-fab-button size="small" (click)="postImage()">
+                <!-- [routerLink]="['agregar-foto']"   -->
+                <ion-icon name="add"></ion-icon>
+              </ion-fab-button>
+            </ion-row>
+
+            <ion-row class="ion-align-items-center">
+              <ion-col size="11"
+                ><app-search-bar [atributos]="['Titulo', 'Codigo']">
+                </app-search-bar
+              ></ion-col>
+              <ion-col size="1">
+                <ion-button (click)="toggleFiltro()" color="medium">
+                  <ion-icon name="funnel"></ion-icon>
+                  <!-- <ion-icon name="options"></ion-icon> -->
+                </ion-button></ion-col
+              >
+            </ion-row>
+            <ion-grid>
+              <ion-row class="ion-padding-end">
+                <!-- class="ion-text-center" -->
+                <ion-col size="6" size-md="3" class="">Obra</ion-col>
+                <ion-col class="ion-hide-md-down ion-padding-start" size="4"
+                  >Autor</ion-col
+                >
+                <ion-col class="ion-text-center" size="3" size-md="2"
+                  >Premio</ion-col
+                >
+                <ion-col class="ion-hide-md-down ion-text-center" size="2"
+                  >Puntaje</ion-col
+                >
+                <ion-col class="ion-hide-md-up ion-text-center" size="2"
+                  >Ptje</ion-col
+                >
+                <ion-col size="1"></ion-col>
               </ion-row>
             </ion-grid>
-          </ion-item>
-        </ion-list>
+            <ion-list>
+              <ion-item class="ion-no-padding">
+                <ion-grid *ngIf="!loading">
+                  <!-- class="ion-text-center" -->
+                  <ion-row size="12" *ngFor="let r of contestResults">
+                    <ion-col size="6" size-md="3" class="ion-align-self-center">
+                      <ion-card-subtitle title="Código de la obra"
+                        >{{ getImage(r).code }}</ion-card-subtitle
+                      >
+                      <!-- <ion-card-title >Prueba de Riendas</ion-card-title> -->
+
+                      <ion-text title="Nombre de la obra"
+                        ><b>{{ getImage(r).title }}</b></ion-text
+                      >
+                    </ion-col>
+                    <ion-col
+                      class="
+                        ion-hide-md-down ion-text-center ion-align-self-center
+                      "
+                      size="4"
+                    >
+                      <!-- <ion-text>Martin Martinez  Martinez</ion-text> -->
+                      <!--    TODO: componente usuario -->
+                      <ion-item lines="none">
+                        <!-- <app-usuario-img
+                        class="ion-float-left ion-margin-end"
+                       
+                      ></app-usuario-img> -->
+
+                        <!-- <ion-label class="ion-float-left"> -->
+                        <ion-label>
+                          <!-- <ion-card-subtitle>username</ion-card-subtitle> -->
+                          <!-- <ion-card-subtitle><a [href]="'mailto:'+'@'"> lmm@gmail </a></ion-card-subtitle> -->
+                          <!-- <ion-text><b>Perfil id {{ getImage(r).profile_id }}</b></ion-text> -->
+                          <ion-card-subtitle title="Entidad del autor"
+                            >{{ getFotoclubName(r) }}</ion-card-subtitle
+                          >
+                          <ion-text title="Autor de la obra"
+                            ><b
+                              >{{ getProfile(r).name + ' ' +
+                              getProfile(r).last_name }}</b
+                            ></ion-text
+                          >
+                          <!-- <ion-card-subtitle>DNI 11.111.111</ion-card-subtitle> -->
+                        </ion-label>
+                      </ion-item>
+                    </ion-col>
+                    <ion-col
+                      class="ion-text-center ion-align-self-center"
+                      size="3"
+                      size-md="2"
+                    >
+                      <ion-text>R</ion-text>
+                    </ion-col>
+                    <ion-col
+                      class="ion-text-center ion-align-self-center"
+                      size="2"
+                    >
+                      <ion-text>-</ion-text>
+                    </ion-col>
+
+                    <ion-col size="1" class="ion-align-self-center">
+                      <ion-buttons class="ion-hide-lg-down">
+                        <ion-button>
+                          <ion-icon name="create"></ion-icon>
+                        </ion-button>
+                        <ion-button>
+                          <ion-icon name="trash"></ion-icon>
+                        </ion-button>
+                      </ion-buttons>
+                      <ion-buttons class="ion-hide-lg-up">
+                        <ion-button (click)="mostrarAcciones($event, r)">
+                          <ion-icon
+                            slot="icon-only"
+                            ios="ellipsis-horizontal"
+                            md="ellipsis-vertical"
+                          ></ion-icon>
+                        </ion-button>
+                      </ion-buttons>
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
+              </ion-item>
+            </ion-list>
+          </ion-col>
+        </ion-row>
       </ion-col>
     </ion-row>
   </ion-grid>
