--- a/src/app/concursos/concursos.page.html
+++ b/src/app/concursos/concursos.page.html
@@ -16,7 +16,8 @@
 </ion-header> -->
 
 <ion-content>
-  <ion-fab *ngIf="auth.loggedIn()"
+  <ion-fab
+    *ngIf="auth.loggedIn()"
     vertical="bottom"
     horizontal="end"
     slot="fixed"
@@ -28,52 +29,134 @@
   </ion-fab>
 
   <ion-grid>
+    <ion-row>
+      <ion-col size="3" *ngIf="mostrarFiltro">
+        <ion-col>
+          <ion-title class="ion-margin-top">Búsqueda</ion-title>
 
-    <ion-row >
-      
-      <ion-col size="12" size-md="7" offset="1">
-        <ion-row class="ion-justify-content-start ion-align-items-center ion-margin-top ion-margin-bottom ion-hide-md-down"  *ngIf="auth.loggedIn()">
-          <h1 class="ion-margin-top ion-margin-bottom ion-margin-end">Concursos</h1>
-          <ion-fab-button [routerLink]="['nuevo']" size="small" 
-          >
-            <ion-icon name="add"></ion-icon>
-          </ion-fab-button>
-        </ion-row>
-        <!-- <ion-searchbar [(ngModel)]="searchQuery"></ion-searchbar> -->
-        <!-- <ion-searchbar (ionChange)="buscarConcursos($event.target.value)"></ion-searchbar> -->
+          <ion-list>
+            <ion-radio-group value="biff">
+              <ion-list-header>
+                <ion-label>Filtrar por:</ion-label>
+              </ion-list-header>
 
-        <app-search-bar 
-          (buscar)="filtrarConcursos($event)"
-          [atributosObj]="atributosBusqueda"
-        ></app-search-bar>
+              <ion-item>
+                <ion-label>Nombre</ion-label>
+                <ion-radio slot="start" value="nombre"></ion-radio>
+              </ion-item>
 
-          <ion-list *ngIf="concursos.length > 0; else texto">
-            <!-- concurso card -->
-            <!-- <ion-card *ngFor="let concurso of concursos"> -->
-            <ion-card *ngFor="let concurso of concursos">
-              <ion-card-header>
-                <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
-                <ion-card-title>{{concurso.name}}</ion-card-title>
-              </ion-card-header>
-              <!-- <ion-img [src]="concurso.thumbnailUrl"></ion-img> -->
-              <ion-card-content>{{concurso.description}}</ion-card-content>
-              <ion-row class="ion-float-right" >
-                <ion-col >
-                  <!-- <ion-toolbar> -->
-                    <!-- <ion-buttons slot="start"> -->
-                      <ion-button size="small" [routerLink]="[concurso.id]">Ver concurso</ion-button>
-                    <!-- </ion-buttons> -->
-                  <!-- </ion-toolbar> -->
-                </ion-col>
-              </ion-row>
-              <!-- <ion-label>{{item}}</ion-label> -->
-            </ion-card>
+              <ion-item>
+                <ion-label>Descripción</ion-label>
+                <ion-radio slot="start" value="codigo"></ion-radio>
+              </ion-item>
+            </ion-radio-group>
           </ion-list>
-          <ng-template #texto>
-            <ion-item>No se encontraron concursos</ion-item>
-          </ng-template>
+
+          <ion-row>
+            <ion-list-header>
+              <ion-label>Fecha:</ion-label>
+            </ion-list-header>
+            <ion-col>
+              <ion-item>
+                <ion-label position="stacked">Desde</ion-label>
+                <ion-input type="number" min="1967" max="2021" name="desde_fecha">
+                </ion-input> </ion-item
+            ></ion-col>
+            <ion-col>
+              <ion-item>
+                <ion-label position="stacked">Hasta</ion-label>
+                <ion-input type="number" min="1" max="13" name="hasta_fecha">
+                </ion-input> </ion-item
+            ></ion-col>
+            <ion-col
+              ><ion-fab-button size="small">
+                <ion-icon
+                  name="arrow-forward-circle"
+                ></ion-icon> </ion-fab-button
+            ></ion-col>
+          </ion-row>
+<ion-row>
+  <ion-list-header>
+    <ion-label>Etiquetas:</ion-label>
+  </ion-list-header>
+
+  <ion-chip (click)="toggleChipMark()">
+    <ion-icon *ngIf="markChip" name="checkmark-circle" color="dark"></ion-icon>
+    <ion-label>Default</ion-label>
+  </ion-chip>
+</ion-row>
+
+        </ion-col>
       </ion-col>
-      <!-- filtro y busqueda -->      
+      <ion-col>
+        <ion-row>
+          <ion-col size-md="10" push-md="1">
+            <ion-row
+              class="
+                ion-justify-content-start
+                ion-align-items-center
+                ion-margin-top
+                ion-margin-bottom
+                ion-hide-md-down
+              "
+              *ngIf="auth.loggedIn()"
+            >
+              <h1 class="ion-margin-top ion-margin-bottom ion-margin-end">
+                Concursos
+              </h1>
+              <ion-fab-button [routerLink]="['nuevo']" size="small">
+                <ion-icon name="add"></ion-icon>
+              </ion-fab-button>
+            </ion-row>
+            <!-- <ion-searchbar [(ngModel)]="searchQuery"></ion-searchbar> -->
+            <!-- <ion-searchbar (ionChange)="buscarConcursos($event.target.value)"></ion-searchbar> -->
+
+            <ion-row class="ion-align-items-center">
+              <ion-col size="11">
+                <app-search-bar
+                  (buscar)="filtrarConcursos($event)"
+                  [atributosObj]="atributosBusqueda"
+                ></app-search-bar
+              ></ion-col>
+              <ion-col size="1">
+                <ion-button (click)="toggleFiltro()" color="medium">
+                  <ion-icon name="funnel"></ion-icon>
+                  <!-- <ion-icon name="options"></ion-icon> -->
+                </ion-button></ion-col
+              >
+            </ion-row>
+            <ion-list *ngIf="concursos.length > 0; else texto">
+              <!-- concurso card -->
+              <!-- <ion-card *ngFor="let concurso of concursos"> -->
+              <ion-card *ngFor="let concurso of concursos">
+                <ion-card-header>
+                  <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
+                  <ion-card-title>{{concurso.name}}</ion-card-title>
+                </ion-card-header>
+                <!-- <ion-img [src]="concurso.thumbnailUrl"></ion-img> -->
+                <ion-card-content>{{concurso.description}}</ion-card-content>
+                <ion-row class="ion-float-right">
+                  <ion-col>
+                    <!-- <ion-toolbar> -->
+                    <!-- <ion-buttons slot="start"> -->
+                    <ion-button size="small" [routerLink]="[concurso.id]"
+                      >Ver concurso</ion-button
+                    >
+                    <!-- </ion-buttons> -->
+                    <!-- </ion-toolbar> -->
+                  </ion-col>
+                </ion-row>
+                <!-- <ion-label>{{item}}</ion-label> -->
+              </ion-card>
+            </ion-list>
+            <ng-template #texto>
+              <ion-item>No se encontraron concursos</ion-item>
+            </ng-template>
+          </ion-col>
+        </ion-row>
+      </ion-col>
+
+      <!-- filtro y busqueda -->
     </ion-row>
   </ion-grid>
 </ion-content>
