--- a/src/app/usuario/usuarios-abm/usuarios-abm.page.html
+++ b/src/app/usuario/usuarios-abm/usuarios-abm.page.html
@@ -1,47 +1,180 @@
 <ion-content>
   <ion-grid>
-    <ion-row class="ion-justify-content-end">
-      <ion-col size="12" size-md="8">
-        <app-search-bar 
-          (buscar)="filtrarUsuarios($event)"
-          [atributos]="['username', 'email']"
-        ></app-search-bar>
+    <ion-row>
+    <ion-col size="3" *ngIf="mostrarFiltro">
+      <ion-col>
+        <ion-title class="ion-margin-top">Búsqueda</ion-title>
 
+        <ion-list>
+          <ion-radio-group value="biff">
+            <ion-list-header>
+              <ion-label>Filtrar por:</ion-label>
+            </ion-list-header>
+
+            <ion-item>
+              <ion-label>Nombre</ion-label>
+              <ion-radio slot="start" value="nombre"></ion-radio>
+            </ion-item>
+
+            <ion-item>
+              <ion-label>Username</ion-label>
+              <ion-radio slot="start" value="codigo"></ion-radio>
+            </ion-item>
+
+            <ion-item>
+              <ion-label>DNI</ion-label>
+              <ion-radio slot="start" value="concursante"></ion-radio>
+            </ion-item>
+            <ion-item>
+              <ion-label>email</ion-label>
+              <ion-radio slot="start" value="concursante"></ion-radio>
+            </ion-item>
+            <ion-item>
+              <ion-label>Entidad</ion-label>
+              <ion-radio slot="start" value="fotoclub"></ion-radio>
+            </ion-item>
+          </ion-radio-group>
+        </ion-list>
+
+        <!-- <ion-row>
+          <ion-list-header>
+            <ion-label>Puntaje:</ion-label>
+          </ion-list-header>
+          <ion-col>
+            <ion-item>
+              <ion-label position="stacked">Desde</ion-label>
+              <ion-input type="number" min="1" max="13" name="desde_puntaje">
+              </ion-input> </ion-item
+          ></ion-col>
+          <ion-col>
+            <ion-item>
+              <ion-label position="stacked">Hasta</ion-label>
+              <ion-input type="number" min="1" max="13" name="hasta_puntaje">
+              </ion-input> </ion-item
+          ></ion-col>
+          <ion-col
+            ><ion-fab-button size="small">
+              <ion-icon
+                name="arrow-forward-circle"
+              ></ion-icon> </ion-fab-button
+          ></ion-col>
+        </ion-row> -->
+
+        <ion-col>
+          <!-- opcion 1 -->
+          <!--   <ion-list>
+            <ion-list-header>
+              <ion-label>Premio:</ion-label>
+            </ion-list-header>
+            <ion-button fill="clear" href="#">Reprobado</ion-button>
+            <ion-button fill="clear" href="#">Aprobado</ion-button>
+            <ion-button fill="clear" href="#">Mención</ion-button>
+            <ion-button fill="clear" href="#">Medalla</ion-button>
+            <ion-button fill="clear" href="#">1° Premio</ion-button>
+          </ion-list> -->
+
+          <!-- opcion 2 -->
+          <ion-list>
+            <ion-list-header>
+              <ion-label>Rol:</ion-label>
+            </ion-list-header>
+            <ion-item
+              ><ion-button fill="clear" href="#"
+                >Administrador</ion-button
+              ></ion-item
+            >
+            <ion-item
+              ><ion-button fill="clear" href="#"
+                >Concursante</ion-button
+              ></ion-item
+            >
+            <ion-item>
+              <ion-button fill="clear" href="#">Jurado</ion-button></ion-item
+            >
+            <ion-item>
+              <ion-button fill="clear" href="#"
+                >Delegado</ion-button
+              ></ion-item
+            >
+          </ion-list>
+        </ion-col>
+      </ion-col>
+    </ion-col>
+    
+    
+    <ion-col>
+    <ion-row>
+      <ion-col size="11.5" push="0.25">
         <!-- usuario, email, fotoclub -->
         <ion-grid>
-          <ion-row>
-            <h2>{{titulo}}</h2>
+          <ion-row
+            class="
+              ion-justify-content-start
+              ion-align-items-center
+              ion-margin-top
+              ion-margin-bottom
+            "
+          >
+            <h2 class="ion-margin-top ion-margin-bottom ion-margin-end">
+              {{titulo}}
+            </h2>
+            <ion-fab-button [routerLink]="['nuevo']" size="small">
+              <ion-icon name="add"></ion-icon>
+            </ion-fab-button>
           </ion-row>
+
+          <ion-row class="ion-align-items-center">
+            <ion-col size="11"
+              ><app-search-bar
+                (buscar)="filtrarUsuarios($event)"
+                [atributos]="['username', 'email']"
+              >
+              </app-search-bar
+            ></ion-col>
+            <ion-col size="1">
+              <ion-button (click)="toggleFiltro()" color="medium">
+                <ion-icon name="funnel"></ion-icon>
+                <!-- <ion-icon name="options"></ion-icon> -->
+              </ion-button></ion-col
+            >
+          </ion-row>
+
           <ion-row class="ion-hide-md-down">
             <ion-col size="6">Usuario</ion-col>
             <!-- <ion-col size="2">Email</ion-col> -->
             <ion-col size="2">Rol</ion-col>
-            <ion-col size="2">Fotoclub</ion-col>
+            <ion-col size="2">Entidad</ion-col>
             <ion-col size="2">Acciones</ion-col>
           </ion-row>
         </ion-grid>
+
         <ion-list *ngIf="usuarios.length > 0; else texto">
           <ion-item *ngFor="let u of usuarios">
-            <ion-grid >
+            <ion-grid>
               <ion-row size="12">
                 <ion-col size="12" size-md="6">
-                  <ion-row class="ion-align-items-center ion-justify-content-between">
+                  <ion-row
+                    class="ion-align-items-center ion-justify-content-between"
+                  >
                     <!-- <ion-item lines="none"> -->
-                      <ion-row class="ion-justify-content-between">
-                        <!-- class="ion-float-left ion-margin-end" -->
-                        <app-usuario-img
-                          [src]="u.img_url"
-                        ></app-usuario-img>
-    
-                        <!-- class="ion-float-left"> -->
-                        <ion-label class="ion-margin-start"
+                    <ion-row class="ion-justify-content-between">
+                      <!-- class="ion-float-left ion-margin-end" -->
+                      <app-usuario-img [src]="u.img_url"></app-usuario-img>
+
+                      <!-- class="ion-float-left"> -->
+                      <ion-label class="ion-margin-start">
+                        <ion-card-subtitle title="Username">{{u.username}}</ion-card-subtitle>
+                        <ion-text title="Nombre"
+                          ><b>{{u.name + ' ' + u.last_name}}</b></ion-text
                         >
-                          <ion-card-subtitle>{{u.username}}</ion-card-subtitle>
-                          <ion-text><b>{{u.name + ' ' + u.last_name}}</b></ion-text>
-                          <ion-card-subtitle><a [href]="'mailto:'+u.email"> {{ u.email }} </a></ion-card-subtitle>
-                          <ion-card-subtitle>DNI {{u.dni}}</ion-card-subtitle>
-                        </ion-label>
-                      </ion-row>
+                        <ion-card-subtitle title="e-mail"
+                          ><a [href]="'mailto:'+u.email">
+                            {{ u.email }}
+                          </a></ion-card-subtitle
+                        >
+                        <ion-card-subtitle title="DNI">DNI {{u.dni}}</ion-card-subtitle>
+                      </ion-label>
+                    </ion-row>
                     <!-- </ion-item> -->
                     <ion-buttons class="ion-hide-md-up">
                       <ion-button (click)="mostrarAcciones($event, u.id)">
@@ -52,12 +185,11 @@
                         ></ion-icon>
                       </ion-button>
                     </ion-buttons>
-                    
                   </ion-row>
 
-                    <!-- </ion-col>
+                  <!-- </ion-col>
                     <ion-col size="2" class="ion-hide-md-up"> -->
-                      <!-- <ion-buttons>
+                  <!-- <ion-buttons>
                         <ion-button (click)="mostrarAcciones($event, u.id)">
                           <ion-icon
                             slot="icon-only"
@@ -66,7 +198,7 @@
                           ></ion-icon>
                         </ion-button>
                       </ion-buttons> -->
-                    <!-- </ion-col>
+                  <!-- </ion-col>
                   </ion-row> -->
 
                   <!-- <ion-item lines="none">
@@ -95,7 +227,7 @@
                 </ion-col>
                 <ion-col
                   size="2"
-                  class="ion-hide-md-down ion-align-self-center "
+                  class="ion-hide-md-down ion-align-self-center"
                 >
                   <!-- <ion-text>{{ u.rol_id }}</ion-text> -->
                   <ion-text>{{ getRoleType(u.rol_id) }}</ion-text>
@@ -109,13 +241,16 @@
                 </ion-col> -->
                 <ion-col
                   size="2"
-                  class="ion-hide-md-down ion-align-self-center "
+                  class="ion-hide-md-down ion-align-self-center"
                 >
                   <!-- <ion-text>{{  u.fotoclub_id }}</ion-text> -->
-                  <ion-text>{{  getFotoclubName(u.fotoclub_id) }}</ion-text>
+                  <ion-text>{{ getFotoclubName(u.fotoclub_id) }}</ion-text>
                   <!-- <ion-text>{{ db.getFotoclubName(u.fotoclub_id) }}</ion-text> -->
                 </ion-col>
-                <ion-col size="2" class="ion-align-self-center ion-hide-md-down"> 
+                <ion-col
+                  size="2"
+                  class="ion-align-self-center ion-hide-md-down"
+                >
                   <ion-buttons>
                     <ion-button [routerLink]="['editar/' + u.id]">
                       <ion-icon name="create"></ion-icon>
@@ -129,16 +264,16 @@
             </ion-grid>
           </ion-item>
         </ion-list>
-        <ng-template #texto >
-          <ion-item *ngIf="searchParams != undefined">No hay usuarios con {{searchParams.atributo}} que empiece con '{{ searchParams.query }}'</ion-item>
+        <ng-template #texto>
+          <ion-item *ngIf="searchParams != undefined"
+            >No hay usuarios con {{searchParams.atributo}} que empiece con '{{
+            searchParams.query }}'</ion-item
+          >
         </ng-template>
-
-      </ion-col>
-      <!-- filtro y busqueda -->
-      <ion-col size="3" class="ion-hide-md-down">
-        <ion-button [routerLink]="['nuevo']">Nuevo</ion-button>
       </ion-col>
     </ion-row>
+    </ion-col>
+  </ion-row>
   </ion-grid>
 
   <ion-fab
